Remove site title from title

--- a/public/500.html
+++ b/public/500.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SITE TITLE - We're sorry, but something went wrong (500)</title> 
+  <title>We're sorry, but something went wrong (500)</title>
   <style>
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video,applet,a,acronym,big,font,strike,tt{border:0;outline:0;font-weight:inherit;font-style:inherit;vertical-align:baseline;font-family:Arial, "Helvetica Neue", Helvetica, sans-serif;font-size:12px;margin:0;padding:0}
- 
+
   /*STYLE*/
   article{width:940px;position:relative;margin:0 auto}
   p.logo{position:absolute;top:34px;left:0;font-size:48px}
@@ -20,7 +20,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
   form{display:inline-block;position:relative}
   form input[type=text]{display:inline-block;height:28px;vertical-align:center;-webkit-border-radius:20px;-moz-border-radius:20px;border-radius:20px;border:solid 1px;width:200px;padding:0 10px}
   form input[type=submit]{border:0 none;display:block;font-size:0;height:26px;position:absolute;right:10px;top:2px;width:14px;background-image:url(images/404-search.png);cursor:pointer;color:#fff!important}
-  
+
   /*LOGO*/
 /*  p.logo{
     overflow: hidden;
@@ -65,7 +65,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
     <div id="supporting-content">
       <p>
         <a href="/" title="Return to the home page">Return to the home page</a>
-        or 
+        or
       </p>
       <form class="search" method="get" action="/search" accept-charset="UTF-8">
       <input id="q" class="search" type="text" placeholder="Search Site" title="Search" name="q">
