--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SITE TITLE - The page you were looking for doesn't exist (404)</title> 
+  <title>The page you were looking for doesn't exist (404)</title>
     <style>
  html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video,applet,a,acronym,big,font,strike,tt{border:0;outline:0;font-weight:inherit;font-style:inherit;vertical-align:baseline;font-family:Arial, "Helvetica Neue", Helvetica, sans-serif;font-size:12px;margin:0;padding:0}
 
@@ -65,8 +65,8 @@
     <div id="supporting-content">
       <p>
         <a href="/" title="Return to the home page">Return to the home page</a>
-        or 
-      </p>  
+        or
+      </p>
       <form class="search" method="get" action="/search" accept-charset="UTF-8">
       <input id="q" class="search" type="text" placeholder="Search Site" title="Search" name="q">
       <input type="submit" value="Search" name="commit">
